# Terrane

./: CLAUDE.md  README.md  pyproject.toml  terrane-design-doc.md
.claude/: launch.json
fixtures/: cadence_no.mid  cadence_yes.mid  chromatic.mid  diatonic_hold.mid  loop4.mid  modulate_and_stay.mid  pivot_modulation.mid  route_a.mid  route_b.mid  tritone_modulation.mid  walk_fifths_journey.mid  walk_grand_tour.mid  walk_harmonic_loop.mid  walk_home_and_back.mid  walk_region_tour.mid  walk_spectral_sweep.mid
frontend/: index.html
terrane/: __init__.py  chords.py  engine.py  features.py  fifths.py  fixtures.py  histogram.py  home.py  midi_io.py  params.py  particle.py  server.py  state.py  terrain.py  tonality_client.py
tests/: test_acceptance.py
